Fixed alignment issues on home page

--- a/styles.css
+++ b/styles.css
@@ -32,13 +32,6 @@ h3 {
   width: 8rem;
 }
 
-.pop-car {
-  width: 100%;
-  height: 100%;
-}
-
-/* Feature cars */
-
 .feature-title {
   font-family: "Lobster", sans-serif;
   font-size: 36px;
